--- a/pod-emptydir.yaml
+++ b/pod-emptydir.yaml
@@ -1,18 +1,29 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-world
+  labels:
+    run: empty-1
+  name: empty-1
 spec:
   containers:
-    - name: teste
-      image: ubuntu
-      args:
-        - sleep
-        - infinity
-      volumeMounts:
-        - name: teste-1
-          mountPath: /teste1
-  volumes:
-    - name: primeiro-emptydir
-      emptyDir:
-        sizeLimit: 256Mi
+  - image: nginx
+    name: empty-1
+    volumeMounts:   #--> Local ao qual o volume é utilizado no POD.
+    - mountPath: /empty-1
+      name: primeiro-emptydir
+    args:
+    - sleep
+    - "1800"
+    resources:
+      limits:
+        cpu: "1"
+        memory: "128Mi"
+      requests:
+        cpu: "0.5"
+        memory: "64Mi"
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+  volumes:   #--> Local ao qual o volume é declarado no manifesto.
+  - name: primeiro-emptydir
+    emptyDir:
+      sizeLimit: 256Mi
