--- a/pod-limitaded.yaml
+++ b/pod-limitaded.yaml
@@ -1,6 +1,6 @@
-apiVersion: v1
-kind: Pod
-metadata:
+apiVersion: v1 #--> Versão da API que controla os PODs.
+kind: Pod      #--> Recurso a ser criado, neste caso um "POD".
+metadata:      #--> Informações de metadata do recurso.
   name: hello-world
   labels:
     run: hello-world
@@ -12,8 +12,8 @@ spec:
         - containerPort: 80
       resources:
         limits:
-          memory: "128Mi"
-          cpu: "0.5"
+          memory: "128Mi" #--> Limite máximo de memória a ser utilizado pelo POD.
+          cpu: "0.5" #--> Limite máximo a ser utilizado pelo POD.
         requests:
-          memory: "64Mi"
-          cpu: "0.3"
+          memory: "64Mi" #--> Kubernetes garante essa quantidade de CPU para o POD.
+          cpu: "0.3" #--> Kubernetes garante essa quantidade de Memoria para o POD.
