--- a/pod-multi-container.yaml
+++ b/pod-multi-container.yaml
@@ -1,17 +1,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-world
   labels:
-    run: hello-world
+    run: giropops
+  name: giropops
 spec:
   containers:
-    - name: teste-1
-      image: nginx
-      ports:
-        - containerPort: 80
-    - name: teste-2
-      image: alpine
-      args:
-      - sleep
-      - "1800"
+  - image: nginx     #--> Declaração da imagem do primeiro container no Pod.
+    name: multi-1    #--> Declaração do name para o primeiro container no Pod.
+    ports:
+    - containerPort: 80
+  - image: alpine    #--> Declaração da imagem do segundo container no Pod.
+    name: multi-2    #--> Declaração do name para o segundo container no Pod.
+    resources:
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+status: {}
